Archive2/ba/5db44f8457e8ee/output
main.cpp:3:27: error: stray '#' in program
         std::vector<int> t#include <fstream>
                           ^
main.cpp:2:5: error: 'perf_data' does not name a type
     perf_data performance(F const & f, int calls){
     ^
In file included from /usr/local/include/c++/4.9.2/ios:39:0,
                 from /usr/local/include/c++/4.9.2/istream:38,
                 from /usr/local/include/c++/4.9.2/sstream:38,
                 from /usr/local/include/c++/4.9.2/complex:45,
                 from main.cpp:4:
/usr/local/include/c++/4.9.2/exception:35:37: error: expected declaration before end of line
 #pragma GCC visibility push(default)
                                     ^
